Implemented full game functionality with win loss tracking, point tracking. Added splashscreen

--- a/src/Battleship_en_CA.properties
+++ b/src/Battleship_en_CA.properties
@@ -11,6 +11,7 @@ system_possessive = System's
 
 guess_hit = %s successfully hit the %s ship at %s%d
 guess_miss = %s guessed %s%d and missed
+boat_sunk = %s has sunk %s size %d boat at %s%d
 first_turn = A coin has been flipped and the %s can make the first guess!
 
 boat_created = Boat of size %d created at %s%d
@@ -20,6 +21,15 @@ error_boats_missing = Error: Game cannot start yet, all of your ships must be pl
 
 language_changed = Language was changed to %s
 dimensions_changed = Dimensions were changed to %dx%d
+
+game_over = Game over! %s has won the game!%nPlayer scored %d hits, System scored %d hits!
+game_over_restart = Would you like to start another game?
+win_loss = Player has %d wins, System has %d wins
+new_game_title = New Game?
+new_game_ask = Are you sure you wish to start a new game?
+new_game_notice = \n\nA new game has begun! Good luck!
+
+color_notice = Color changing has not been implemented yet
 
 # UI component labels
 title_bar = Battleship by Dylan Boyling
