--- a/src/Battleship_fr_CA.properties
+++ b/src/Battleship_fr_CA.properties
@@ -11,6 +11,7 @@ system_possessive = Système
 
 guess_hit = %s a frappé avec succès le navire %s à %s%d
 guess_miss = %s deviné %s%d et manqué
+boat_sunk = %s a coulé %s bateau de taille %d à %s%d
 first_turn = Une pièce de monnaie a été retournée et le %s peut faire la première supposition!
 
 boat_created = Bateau de taille %d créé à %s%d
@@ -20,6 +21,15 @@ error_boats_missing = Erreur: Le jeu ne peut pas encore démarrer, tous vos navir
 
 language_changed = La langue a été changée en %s
 dimensions_changed = Les dimensions ont été remplacées par %dx%d
+
+game_over = Jeu terminé! %s a gagné la partie!%nLe joueur a marqué %dcoups, le système a marqué %d coups!
+game_over_restart = Voulez-vous commencer une autre partie?
+win_loss = Le joueur gagne: %d | Le système gagne:
+new_game_title = Nouveau jeu?
+new_game_ask = Êtes-vous sûr de vouloir commencer une nouvelle partie
+new_game_notice = \n\nUne nouvelle partie a commencé! Bonne chance!
+
+color_notice = Le changement de couleur n'a pas encore été implémenté
 
 # UI component labels
 title_bar = Cuirassé par Dylan Boyling
